[gd_scene load_steps=21 format=3 uid="uid://b3ted6o1283yl"]

[ext_resource type="Texture2D" uid="uid://crqrtvrug0tx5" path="res://Assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://1imxilsj8y4n" path="res://scripts/player.gd" id="1_v6fml"]
[ext_resource type="Script" uid="uid://2t8k30fdlhoq" path="res://scenes/left_raycast.gd" id="3_mdl7e"]
[ext_resource type="Script" uid="uid://bs5v82ruk4agj" path="res://scenes/right_raycast.gd" id="4_qu4a1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2brh"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn4c7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vejd"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws0vm"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhr3r"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t53lx"]
atlas = ExtResource("1_p0vlq")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fml"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("1_p0vlq")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_p0vlq")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_yi2kj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2brh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn4c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vejd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws0vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhr3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t53lx")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}],
"loop": true,
"name": &"walk",
"speed": 13.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v6fml"]
radius = 5.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_v6fml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = SubResource("SpriteFrames_yi2kj")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_v6fml")

[node name="LeftRaycast" type="RayCast2D" parent="."]
target_position = Vector2(-4, 3)
script = ExtResource("3_mdl7e")

[node name="DownRaycast" type="RayCast2D" parent="."]
position = Vector2(12, -11)
target_position = Vector2(0, 6)
hit_from_inside = true
script = ExtResource("3_mdl7e")

[node name="UpRaycast" type="RayCast2D" parent="."]
position = Vector2(12, -11)
target_position = Vector2(0, -7)
hit_from_inside = true
script = ExtResource("3_mdl7e")

[node name="RightRaycast" type="RayCast2D" parent="."]
target_position = Vector2(4, 3)
script = ExtResource("4_qu4a1")
